<resources>
    <string name="app_name">DivarMehrabani</string>
    <string name="action_menu">منو</string>
    <string name="waiting_request">(در انتظار پذیرش)</string>
    <string name="accepted_request">(به شما داده شد)</string>
    <string name="rejected_request">(درخواست شما رد شد)</string>
    <string name="donated_request">(به فرد دیگری هدیه شد)</string>
    <string name="conneciton_internet_failed_message">ظاهرا در ارتباط شما با اینترنت مشکلی وجود
		دارد
	</string>
    <string name="conneciton_server_failed_message">ظاهرا در ارتباط شما با سرور مشکلی وجود دارد
	</string>
    <string name="book">کتاب</string>
    <string name="clothes">پوشاک</string>
    <string name="accessories">لوازم</string>
    <string name="food">غذای نذری</string>
    <string name="select_ur_gift_categorty">لطفا دسته‌بندی هدیه خود را انتخاب کنید.</string>
    <string name="gift_category">دسته‌بندی هدیه</string>
    <string name="send">ارسال</string>
    <string name="my_wall">دیوار من</string>
    <string name="could_not_find_path">Couldn\'t not find your file, try other apps!</string>
    <string name="no_internet_connection">اتصال به اینترنت برقرار نیست</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="default_currency">تومان</string>
    <string name="divar_app_name">Divar</string>
    <string name="divar_app_name_chat">Divar Chat</string>
    <string name="Etisalat">Etisalat</string>
    <string name="Irancell">Irancell</string>
    <string name="MCI">MCI</string>
    <string name="O2_Germany">O2 (Germany)</string>
    <string name="Rightel">Rightel</string>
    <string name="TCI">TCI</string>
    <string name="Taliya">Taliya</string>
    <string name="Turkcell">Turkcell</string>
    <string name="_last_seen">%s دیده شده</string>
    <string name="about">دربارهٔ دیوار</string>
    <string name="about_post_">دربارهٔ آگهی «%s» در دیوار</string>
    <string name="about_version">%1$s (%2$d)</string>
    <string name="accept_terms_rules">با قوانین دیوار موافقم</string>
    <string name="access_denied">شما اجازه دسترسی به این بخش را ندارید</string>
    <string name="access_permission">مجوز دسترسی</string>
    <string name="account_email_sent">لطفا برای تکمیل ثبت نام کد تاییدی که به آدرس ایمیل شما ارسال شد را در برنامه وارد کنید.</string>
    <string name="action_delete_all">حذف همه</string>
    <string name="actionbar_add_post">آگهی جدید</string>
    <string name="actionbar_contact">اطلاعات تماس</string>
    <string name="actionbar_direction">مسیریابی</string>
    <string name="actionbar_discard">بی‌خیال</string>
    <string name="actionbar_filter">غربال</string>
    <string name="actionbar_more_menu">@null</string>
    <string name="actionbar_report">گزارش آگهی</string>
    <string name="actionbar_save_draft">ذخیرهٔ پیش‌نویس</string>
    <string name="actionbar_search">جستجو</string>
    <string name="actionbar_send">ارسال</string>
    <string name="actionbar_share_post">به اشتراک‌گذاری</string>
    <string name="actionbar_title_select_category">انتخاب موضوع آگهی جدید</string>
    <string name="activate_chat">فعال‌سازی چت</string>
    <string name="activate_map">فعال کردن نقشه</string>
    <string name="activation_code">کد فعال‌سازی</string>
    <string name="activity_about_label">دربارهٔ دیوار</string>
    <string name="activity_expired_label">لطفاً به‌روز کنید</string>
    <string name="activity_location_title">انتخاب محل</string>
    <string name="activity_post_button_add_file">افزودن فایل</string>
    <string name="activity_post_button_add_more_file">افزودن فایل دیگر</string>
    <string name="activity_post_button_add_more_photo">افزودن عکسی‌ دیگر</string>
    <string name="activity_post_button_add_more_video">افزودن ویدیویی دیگر</string>
    <string name="activity_post_button_add_photo">افزودن عکس</string>
    <string name="activity_post_button_add_video">افزودن ویدیو</string>
    <string name="activity_post_button_draft">پیش‌نویس</string>
    <string name="activity_post_button_submit">ارسال</string>
    <string name="activity_post_details_label">آگهی</string>
    <string name="activity_post_edit_label">ویرایش آگهی</string>
    <string name="activity_post_send_label">درج آگهی</string>
    <string name="activity_post_title">جزئیات آگهی</string>
    <string name="activity_post_toast_draft_saved">آگهی شما به صورت پیش‌نویس ذخیره شد.</string>
    <string name="activity_post_tree_label">آگهی‌ها</string>
    <string name="activity_prices_label">تعرفه‌ها</string>
    <string name="activity_remove_post_added_detail">توضیح بیشتر در مورد دلیل حذف آگهی</string>
    <string name="activity_remove_post_captcha_fail">آگهی شما حذف نگردید! لطفا دوباره تلاش کنید.</string>
    <string name="activity_remove_post_msg">حذف آگهی</string>
    <string name="activity_remove_post_submitted">آگهی شما با موفقیت حذف شد.</string>
    <string name="activity_report_added_detail">توضیح در مورد گزارش</string>
    <string name="activity_report_empty_description">توضیحی درباره علت گزارش آگهی بنویسید</string>
    <string name="activity_report_label">گزارش</string>
    <string name="activity_report_post_msg">دلیل شکایت</string>
    <string name="activity_report_submitted">شکایت شما از آگهی ثبت شد و در اسرع وقت پیگیری خواهد شد.</string>
    <string name="activity_terms_label">قوانین</string>
    <string name="add_google_account">افزوددن حساب گوگل</string>
    <string name="adjust_app_token">b2qbcui0ee4g</string>
    <string name="all">همه</string>
    <string name="all_filter">همه</string>
    <string name="all_management_links_email_msg">لطفاً آدرس ایمیلی که با آن آگهی‌‌های خود را ثبت کرده‌اید وارد نمایید:</string>
    <string name="all_management_links_email_sent">لینک آگهی‌هایتان برای شما ایمیل شد.</string>
    <string name="all_posts_email">ثبت درخواست</string>
    <string name="all_user_posts_body">لینک مدیریت آگهی ها را در ایمیل خود دریافت کنید:</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="apply">اعمال</string>
    <string name="attachment_download">Attachment download</string>
    <string name="attachment_upload">Attachment upload</string>
    <string name="audio_message">Audio message</string>
    <string name="authenticating">در حال احراز هویت…</string>
    <string name="bad_time">زمان نامناسب</string>
    <string name="bazaar_not_installed">بازار نصب نیست.</string>
    <string name="bazaar_unavailable">برای استفاده از امکانات ویژهٔ پرداخت باید آخرین نسخهٔ بازار را نصب داشته باشید.</string>
    <string name="bookmark">نشان کردن</string>
    <string name="bookmark_added">آگهی نشان شد</string>
    <string name="bookmark_fail">پست نشان نشد! دوباره تلاش کنید</string>
    <string name="bookmark_filter_chooser">انتخاب دسته‌بندی</string>
    <string name="bookmark_removed">نشان آگهی حذف شد</string>
    <string name="button_accept">Accept</string>
    <string name="button_block">Block</string>
    <string name="button_identity">Identity</string>
    <string name="can_not_find_route_to_post">در حال حاضر امکان مسیربابی وجود ندارد</string>
    <string name="cancel">بی‌خیال</string>
    <string name="cancel_adding_post">انصراف</string>
    <string name="cancel_downloading">بی‌خیال</string>
    <string name="canceling_payment">در حال لغو پرداخت…</string>
    <string name="captcha_title">احراز هویت</string>
    <string name="categories">دسته‌بندی‌ها</string>
    <string name="category_special_all_name">همهٔ آگهی‌ها</string>
    <string name="category_special_all_name_city">همهٔ آگهی‌های %s</string>
    <string name="category_special_misc_name">متفرقه</string>
    <string name="cdt_1week">هفته</string>
    <string name="cdt_2days_ago">پریروز</string>
    <string name="cdt_a_few_moments">لحظاتی</string>
    <string name="cdt_days">%s روز</string>
    <string name="cdt_hours">%s ساعت</string>
    <string name="cdt_lt_15minutes">دقایقی</string>
    <string name="cdt_lt_30minutes">یک ربع</string>
    <string name="cdt_lt_60minutes">نیم ساعت</string>
    <string name="cdt_suffix_ago">پیش</string>
    <string name="cdt_suffix_later">دیگر</string>
    <string name="cdt_tomorrow">فردا</string>
    <string name="cdt_weeks">%s هفته</string>
    <string name="cdt_yesterday">دیروز</string>
    <string name="change_venture">تغییر محدوده</string>
    <string name="chat">چت</string>
    <string name="chatSendButton">ارسال</string>
    <string name="login_bar_title">برای مشاهده همهٔ هدیه‌های خود وارد حساب کاربری‌تان شوید.</string>
    <string name="login_tip">با ورود به دیوار مهربانی توسط شماره تلفن خود می‌توانید هدیه‌های خود را ثبت و مدیریت کنید.</string>
    <string name="sign_in">ورود</string>
    <string name="sign_up">دریافت کد تایید</string>
    <string name="verification_not_received">کد تایید به دستم نرسیده</string>
    <string name="searching">در حال جستجو</string>
</resources>