<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:background="#F1F1F1">

	<RelativeLayout
		android:id="@+id/search_top_lay"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white"
		android:padding="10dp"
		android:elevation="4dp">

		<RelativeLayout
			android:id="@+id/my_gift_login_btn"
			android:layout_width="80dp"
			android:layout_height="@dimen/button_height"

			android:layout_margin="4dp"

			android:clickable="true"
			android:layout_centerVertical="true"
			android:background="@drawable/button_selector">

			<hamed_gh.ir.divaaremehrabani.customviews.textviews.TextViewIranSansRegular
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"

				android:layout_centerInParent="true"
				android:textColor="@color/white"
				android:textSize="12dp"
				android:text="@string/sign_in"/>

		</RelativeLayout>

		<hamed_gh.ir.divaaremehrabani.customviews.textviews.TextViewIranSansRegular
			android:layout_width="match_parent"
			android:layout_height="wrap_content"

			android:layout_toRightOf="@id/my_gift_login_btn"

			android:layout_margin="4dp"
			android:text="@string/login_bar_title"/>

	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/search_bottom_lay"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/search_top_lay"
		android:visibility="invisible">

		<com.rey.material.widget.ProgressView
			android:id="@+id/search_progressBar"

			android:layout_width="36dp"
			android:layout_height="36dp"
			android:layout_centerInParent="true"

			app:pv_autostart="true"
			app:pv_circular="true"
			app:pv_progressStyle="@style/InDeterminateCircularProgressDrawableStyle"
			app:pv_progressMode="indeterminate"/>

		<hamed_gh.ir.divaaremehrabani.customviews.textviews.TextViewIranSansRegular
			android:id="@+id/message_textview"

			android:layout_width="wrap_content"
			android:layout_height="wrap_content"

			android:layout_centerHorizontal="true"
			android:layout_below="@id/search_progressBar"
			android:padding="5dp"
			android:text="@string/searching"
			android:textColor="@color/dark_white"

			android:textSize="14sp"/>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/recycler_view"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/grey_200"
			android:visibility="invisible"/>

	</RelativeLayout>

</RelativeLayout>