<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

	<RelativeLayout
		android:id="@+id/toolbar_layout"
		android:layout_width="match_parent"
		android:layout_height="56dp">

		<android.support.v7.widget.Toolbar
			android:id="@+id/main_toolbar"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_alignParentTop="true"
			android:background="@color/colorPrimary"
			android:clipToPadding="false"
			app:contentInsetEnd="0dp"
			app:contentInsetLeft="0dp"
			app:contentInsetRight="0dp"
			app:contentInsetStart="0dp"
			app:theme="@style/MyToolbar"/>

		<ImageView
			android:id="@+id/toolbar_back_iv"
			android:layout_width="48dp"
			android:layout_height="match_parent"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"

			android:background="?attr/selectableItemBackground"
			android:clickable="true"

			android:padding="8dp"
			android:src="@mipmap/ic_back"/>

		<ir.kindnesswall.customviews.textviews.TextViewIranSansRegular
			android:id="@+id/toolbar_title_textView"
			android:layout_width="match_parent"
			android:layout_height="match_parent"

			android:layout_toLeftOf="@id/toolbar_back_iv"
			android:layout_toRightOf="@+id/toolbar_new_gift_btn_tv"

			android:ellipsize="end"
			android:gravity="center_vertical|right"
			android:maxLines="1"

			android:text=""
			android:textColor="#FFFFFF"
			android:textSize="16sp"
			android:visibility="visible"/>

	</RelativeLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/toolbar_layout"

		android:background="@color/white"
		android:paddingLeft="30dp"
		android:paddingRight="30dp"
		android:scrollbarStyle="insideOverlay"
		android:scrollbars="none">

		<LinearLayout
			android:id="@+id/choose_category_lay"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"

			android:background="@color/white"
			android:orientation="vertical">

			<ir.kindnesswall.customviews.textviews.TextViewIranSansRegular
				android:id="@+id/choose_category_tv"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"

				android:layout_marginTop="22dp"

				android:lineSpacingExtra="4dp"

				android:text="@string/login_tip"
				android:textColor="@color/black"
				android:textSize="16dp"/>


			<info.hoang8f.android.segmented.SegmentedGroup
				xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
				android:id="@+id/segmented_group"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"

				android:layout_marginTop="24dp"

				android:orientation="horizontal"

				segmentedgroup:sc_border_width="2dp"
				segmentedgroup:sc_corner_radius="0dp"

				segmentedgroup:sc_tint_color="@color/colorPrimary"
				segmentedgroup:sc_unchecked_tint_color="@color/white"
				segmentedgroup:sc_checked_text_color="@color/colorPrimary">

				<RadioButton
					android:id="@+id/email_rb"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="ایمیل"
					style="@style/RadioButton" />

				<RadioButton
					android:id="@+id/phone_rb"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="شماره تلفن"
					android:checked="true"
					style="@style/RadioButton" />

			</info.hoang8f.android.segmented.SegmentedGroup>

			<ir.kindnesswall.customviews.edit_text.EditTextIranSans
				android:id="@+id/phone_confirimation_code_et"
				android:layout_width="match_parent"
				android:layout_height="42dp"

				android:layout_marginTop="28dp"

				android:background="@android:color/transparent"
				android:lines="1"
				android:gravity="center_vertical"
				android:hint="۰۹۱۲۳۴۵۶۷۸۹"
				android:text=""
				android:textSize="14dp"/>
			<!--android:hint="@string/field_hint_verification_code"-->

			<RelativeLayout
				android:id="@+id/login_get_verification_btn"
				android:layout_width="match_parent"
				android:layout_height="@dimen/button_height_2"

				android:layout_marginTop="12dp"

				android:background="@drawable/button_selector"
				android:clickable="true">

				<ir.kindnesswall.customviews.textviews.TextViewIranSansRegular
					android:id="@+id/login_get_verification_tv"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:layout_centerInParent="true"
					android:text="@string/sign_up"
					android:textColor="@color/white"
					android:textSize="16dp"/>

				<com.rey.material.widget.ProgressView
					android:id="@+id/progressView"
					android:layout_width="24dp"
					android:layout_height="24dp"
					android:layout_centerInParent="true"

					android:visibility="invisible"
					app:cpd_strokeSize="2dp"
					app:pv_autostart="true"
					app:pv_circular="true"

					app:pv_progressMode="indeterminate"
					app:pv_progressStyle="@style/InDeterminateWhiteCircularProgressDrawableStyle"
				/>

			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/second_btn_lay"
				android:layout_width="match_parent"
				android:layout_height="@dimen/button_height_2"

				android:layout_marginTop="4dp"

				android:background="@drawable/button_selector_gray"
				android:clickable="true"
				android:visibility="visible">

				<ir.kindnesswall.customviews.textviews.TextViewIranSansRegular
					android:id="@+id/second_btn_tv"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:layout_centerInParent="true"
					android:text="@string/verification_not_received"
					android:textColor="@color/black"
					android:textSize="16dp"/>

			</RelativeLayout>

		</LinearLayout>

	</ScrollView>
</RelativeLayout>
